# pacman

./: CLAUDE.md  FINAL_OPTIMIZATION_REPORT.md  FIX_REPORT.md  OPTIMIZATION_REPORT.md  README.md  access_api.py  benchmark_deterministic.py  benchmark_optimized.py  pyproject.toml
.review/: 790ee3_HIDE-AGENT-PHASES_v1_record.md
docs/superpowers/plans/: 2026-07-07-cnn-dqn-pacman-agent.md  2026-07-20-hide-agent-debug-readme.md  2026-07-23-road-aware-hideout-filter.md  2026-07-23-road-switching-cycle.md
docs/superpowers/specs/: 2026-07-07-cnn-dqn-pacman-agent-design.md  2026-07-20-hide-agent-debug-readme-design.md  2026-07-23-road-aware-hideout-filter-design.md  2026-07-23-road-switching-cycle-design.md
src/: environment.py
submissions/: benchmark_4vAll.py
submissions/1/: agent.py
submissions/1.2/: README.md  agent.py  train.py
submissions/1/hide_agent/: core.py  helpers.py
submissions/1/testing/: maps.md
submissions/24127020_24127462/: agent.py
submissions/24127020_24127462/hide_agent/: __init__.py  core.py  helpers.py  parameters.py  path_and_distance.py  safety_map.txt  topology.py
submissions/2nd/: adversarial.py  search_utils.py
submissions/4/: agent.py  agent.py.bak
submissions/4/debug/: README.md  debug.py  (+7 more)
submissions/4th/: agent.py
submissions/5th/: agent.py
submissions/6th/: agent.py
submissions/C/: agent.py  model.py
submissions/D/: model.py  train.py
submissions/LAB2/: HIDE-AGENT-PHASES.md  LAB2-INFO.md  agent.py  model.py  revision_road_cycle_check.py
submissions/example_student/: agent.py
submissions/simple_agent/: agent.py
(+42 files in other folders)
