[project]
name = "pacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cpmpy>=0.9.28",
    "cvxpy>=1.9.1",
    "gekko>=1.3.2",
    "minizinc>=0.10.0",
    "numpy>=2.4.6",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "pycsp3>=2.5.1",
    "pyomo>=6.10.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "typing>=3.10.0.0",
]
